@@ -1,3 +1,8 @@
+1999-01-26  Yo Ric Dude  <ericmit@ix.netcom.com>
+
+	* esd-server.h, esd.c, players.c: move recorder_write guts to a
+	separate function, to be used by monitors, and filters.
+
 Mon Jan 25 03:16:30 PST 1999 Manish Singh <yosh@gimp.org>
 
 	* esddsp.c: added a /dev/mixer wrapper. Set ESDDSP_MIXER=1 to
